--- a/.eslintrc
+++ b/.eslintrc
@@ -9,12 +9,12 @@
     "no-var": 2,
     "prefer-arrow-callback": 2,
     "prefer-const": 2,
-    "quotes": [2, "double"],
     "semi": [2, "never"]
   },
   "env": {
     "es6": true,
     "node": true,
-    "browser": true
+    "browser": true,
+    "mocha": true
   }
 }
