--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "bacon.atom",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Alternative to Bacon.Model",
   "main": "lib/bacon.atom.js",
   "scripts": {
     "dist": "babel src --source-maps inline --out-dir lib",
     "lint": "eslint src test",
-    "prepublish": "npm run lint && npm run dist"
+    "prepublish": "npm run lint && npm run test && npm run dist",
+    "test": "node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "babel-eslint": "^4.1.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.3.16",
     "babel-preset-es2015": "^6.3.13",
-    "eslint": "^1.10.3"
+    "eslint": "^1.10.3",
+    "mocha": "^2.3.4"
   }
 }
