--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bacon.atom",
-  "version": "1.0.1",
-  "description": "Alternative to Bacon.Model",
+  "version": "1.1.0",
+  "description": "A garbage collectable alternative to Bacon.Model",
   "main": "lib/bacon.atom.js",
   "scripts": {
     "dist": "babel src --source-maps inline --out-dir lib",
@@ -25,15 +25,16 @@
   "homepage": "https://github.com/dirty-js/bacon.atom#readme",
   "dependencies": {
     "baconjs": "^0.7.83",
+    "partial.lenses": "^0.6.0",
     "ramda": "^0.19.1"
   },
   "devDependencies": {
-    "babel": "^6.3.13",
-    "babel-cli": "^6.3.17",
-    "babel-eslint": "^4.1.6",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.3.16",
-    "babel-preset-es2015": "^6.3.13",
-    "eslint": "^1.10.3",
-    "mocha": "^2.3.4"
+    "babel": "^6.5.2",
+    "babel-cli": "^6.5.1",
+    "babel-eslint": "^4.1.8",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "eslint": "^2.1.0",
+    "mocha": "^2.4.5"
   }
 }
