--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dirty-js/bacon.atom.git"
+    "url": "git+https://github.com/calmm-js/bacon.atom.git"
   },
   "keywords": [
     "bacon",
@@ -20,21 +20,21 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dirty-js/bacon.atom/issues"
+    "url": "https://github.com/calmm-js/bacon.atom/issues"
   },
-  "homepage": "https://github.com/dirty-js/bacon.atom#readme",
+  "homepage": "https://github.com/calmm-js/bacon.atom#readme",
   "dependencies": {
     "baconjs": "^0.7.83",
-    "partial.lenses": "^1.0.0",
+    "partial.lenses": "^1.1.1",
     "ramda": "^0.19.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-cli": "^6.5.1",
+    "babel-cli": "^6.6.5",
     "babel-eslint": "^5.0.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
-    "eslint": "^2.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "eslint": "2.2.x",
     "mocha": "^2.4.5"
   }
 }
