--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bacon.atom",
-  "version": "2.0.3",
+  "version": "3.0.0",
   "description": "A garbage collectable alternative to Bacon.Model",
   "main": "lib/bacon.atom.js",
   "scripts": {
@@ -24,17 +24,16 @@
   },
   "homepage": "https://github.com/calmm-js/bacon.atom#readme",
   "dependencies": {
-    "baconjs": "^0.7.83",
-    "partial.lenses": "^1.1.1",
-    "ramda": "^0.19.1"
+    "baconjs": "^0.7.84",
+    "partial.lenses": "^2.0.0",
+    "ramda": "^0.20.1"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
-    "babel-eslint": "^5.0.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.6.5",
+    "babel-eslint": "^6.0.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
-    "eslint": "2.2.x",
+    "eslint": "^2.5.3",
     "mocha": "^2.4.5"
   }
 }
