--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "bacon.atom",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "A garbage collectable alternative to Bacon.Model",
   "main": "lib/bacon.atom.js",
   "scripts": {
     "dist": "babel src --source-maps inline --out-dir lib",
     "lint": "eslint src test",
     "prepublish": "npm run lint && npm run test && npm run dist",
-    "test": "node_modules/mocha/bin/mocha"
+    "test": "node_modules/.bin/nyc node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -25,15 +25,16 @@
   "homepage": "https://github.com/calmm-js/bacon.atom#readme",
   "dependencies": {
     "baconjs": "^0.7.84",
-    "partial.lenses": "^2.0.0",
-    "ramda": "^0.20.1"
+    "partial.lenses": ">=2.2.0 <4.0.0",
+    "ramda": ">=0.20.1 <0.22.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-eslint": "^6.0.0",
+    "babel-cli": "^6.7.5",
+    "babel-eslint": "^6.0.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.5.3",
-    "mocha": "^2.4.5"
+    "eslint": "^2.7.0",
+    "mocha": "^2.4.5",
+    "nyc": "^6.4.0"
   }
 }
