--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bacon.atom",
-  "version": "3.1.5",
+  "version": "4.0.0",
   "description": "A garbage collectable alternative to Bacon.Model",
   "main": "lib/bacon.atom.js",
   "scripts": {
@@ -25,8 +25,8 @@
   "homepage": "https://github.com/calmm-js/bacon.atom#readme",
   "dependencies": {
     "baconjs": "^0.7.85",
-    "partial.lenses": ">=2.2.0 <6.0.0",
-    "ramda": ">=0.20.1 <0.23.0"
+    "infestines": "^0.1.0",
+    "partial.lenses": ">=2.2.0 <7.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -34,8 +34,9 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
-    "eslint": "^3.11.1",
+    "eslint": "^3.12.1",
     "mocha": "^3.2.0",
-    "nyc": "^10.0.0"
+    "nyc": "^10.0.0",
+    "ramda": "^0.22.1"
   }
 }
