--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bacon.atom",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "description": "A garbage collectable alternative to Bacon.Model",
   "main": "lib/bacon.atom.js",
   "scripts": {
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/calmm-js/bacon.atom#readme",
   "dependencies": {
     "baconjs": "^0.7.85",
-    "infestines": "^0.2.0",
+    "infestines": ">= 0.2.0 <0.4.0",
     "partial.lenses": ">=2.2.0 <8.0.0"
   },
   "devDependencies": {
@@ -37,6 +37,6 @@
     "eslint": "^3.12.1",
     "mocha": "^3.2.0",
     "nyc": "^10.0.0",
-    "ramda": "^0.22.1"
+    "ramda": "^0.23.0"
   }
 }
