--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bacon.atom",
-  "version": "4.0.5",
+  "version": "4.0.6",
   "description": "A garbage collectable alternative to Bacon.Model",
   "main": "lib/bacon.atom.js",
   "scripts": {
@@ -26,7 +26,7 @@
   "dependencies": {
     "baconjs": "^0.7.85",
     "infestines": ">=0.2.0 <0.5.0",
-    "partial.lenses": ">=2.2.0 <10.0.0"
+    "partial.lenses": ">=2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
