--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dist:umd": "    NODE_ENV=dev        rollup -c -n bacon.atom -i src/bacon.atom.js -f umd -o dist/bacon.atom.js",
     "dist:umd.min": "NODE_ENV=production rollup -c -n bacon.atom -i src/bacon.atom.js -f umd -o dist/bacon.atom.min.js",
     "lint": "eslint src test",
-    "prepublish": "npm run lint && npm run dist && npm run test",
+    "prepare": "npm run lint && npm run dist && npm run test",
+    "report-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
     "test": "nyc mocha"
   },
   "repository": {
@@ -34,19 +35,20 @@
     "partial.lenses": ">=2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-eslint": "^7.2.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-register": "^6.24.0",
-    "eslint": "^3.19.0",
-    "mocha": "^3.2.0",
-    "nyc": "^10.2.0",
-    "ramda": "^0.23.0",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "codecov": "^2.3.0",
+    "eslint": "^4.6.1",
+    "mocha": "^3.5.0",
+    "nyc": "^11.2.0",
+    "ramda": "^0.24.1",
+    "rollup": "^0.49.2",
+    "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-uglify": "^1.0.1"
+    "rollup-plugin-replace": "^1.2.1",
+    "rollup-plugin-uglify": "^2.0.1"
   }
 }
