--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "model",
     "lens"
   ],
-  "homepage": "https://github.com/calmm-js/partial.lenses",
+  "homepage": "https://github.com/calmm-js/bacon.atom",
   "dependencies": {
     "bacon": "^0.7.85",
     "infestines": ">=0.2.0 <0.5.0",
