--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   },
   "homepage": "https://github.com/calmm-js/bacon.atom#readme",
   "dependencies": {
-    "baconjs": ">0.7 <2.0",
     "infestines": ">=0.2.0 <0.5.0",
     "partial.lenses": ">=2.2.0"
   },
   "devDependencies": {
+    "baconjs": ">0.7 <2.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
@@ -50,5 +50,8 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1"
+  },
+  "peerDependencies": {
+    "baconjs": ">0.7 <2.0"
   }
 }
