--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "partial.lenses": ">=2.2.0"
   },
   "devDependencies": {
-    "baconjs": ">0.7 <2.0",
+    "baconjs": ">=0.7 <2.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
@@ -52,6 +52,6 @@
     "rollup-plugin-uglify": "^2.0.1"
   },
   "peerDependencies": {
-    "baconjs": ">0.7 <2.0"
+    "baconjs": ">=0.7 <2.0"
   }
 }
